cmake_minimum_required(VERSION 3.15)

project(GTI320-TP0)

add_executable( Niveau0-HelloWorld Niveau0-HelloWorld.cpp)
add_executable( Niveau1-NamespacesEtTableaux Niveau1-NamespacesEtTableaux.cpp)
add_executable( Niveau2-Adresses Niveau2-Adresses.cpp)
add_executable( Niveau3-Heritage Niveau3-Heritage.cpp)
add_executable( Niveau4-Templates Niveau4-Templates.cpp)